# fire-and-smoke

./: CMakeLists.txt  README.md  main.cpp  particle.h  plane.h  textures.h
shaders/: particle.fs  particle.vs  plane.fs  plane.vs
